# bud

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  TODO.md  bud.spec.md  package.json  render.yaml  setup_bud_db.sh
.github/: github.spec.md
bud/: .env.example  .env.https.example  Cargo.toml  README.md  bud.spec.md  build.rs
bud/src/: app.rs  claim.rs  config.rs  doctor.rs  grpc_control.rs  grpc_data.rs  identity.rs  journal.rs  lib.rs  local_llm.rs  main.rs  proto_wire.rs  protocol.rs  run.rs  src.spec.md  transport.rs  util.rs  version.rs
bud/src/files/: files.spec.md  mod.rs
bud/src/proxy/: mod.rs  proxy.spec.md
bud/src/terminal/: backend.rs  delta.rs  interaction.rs  mod.rs  observe.rs  readiness.rs  registry.rs  terminal.spec.md  test_support.rs  tmux.rs
debug/: agent-and-terminal-sse-request-storm.md  agent-progress-indicators.md  agent-repl-output-visibility.md  agent-sse-404.md  agent-sse-disconnect-investigation.md  agent-sse-resync-required-loop.md  agent-sse-stale-tab-reconnect-loop.md  agent-stale-output-and-json-parsing.md  agent-stream-state-and-resume-implementation.md  agent-system-prompt-markdown-import.md  agent-terminal-bud-offline.md  agent-terminal-communication-issues.md  agent-terminal-run-output-flow.md  api-me-issuer-mismatch.md  api-me-opaque-access-token.md  ask-question-start-thread-title.md  assistant-message-render-bounce.md  assistant-newline-rendering.md  auth-token-resource-body-cast-build-failure.md  auto-compaction-threshold-mismatch.md  browser-terminal-input-leak.md  bud-daemon-local-https-mkcert-unknown-issuer.md  bud-daemon-sleep-resume-reconnect-stall.md  bud-dispatch-hang.md  bud-reconnect-after-service-restart.md  bud-run-failure.md  capture-pane-dedup-failure.md  chat-thinking-indicator-overlap.md  chat-timeline-scroll-incomplete.md  claude-in-terminal-context-loss.md  codex-startup-latency-in-tmux-vs-local.md  codex-two-second-delay-in-bud-daemon-path.md  composer-spinner-resets.md  connect-deadline-confirmation.md  context-meter-usable-context-test-failure.md  db-push-thread-web-view-primary-key.md  device-reauth-claim-page-stuck-approving.md  drizzle-auth-schema-push.md  drizzle-migration-history-repair.md  drizzle-migration-not-applied.md  (+124 more)
deploy/: deploy.spec.md
design/: context-compaction.md  (+81 more)
spikes/grpc-interop/daemon/: Cargo.toml  build.rs  daemon.spec.md
spikes/grpc-interop/daemon/src/: main.rs  src.spec.md
(+1148 files in other folders)
