[package]
name = "bud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
hmac = "0.12"
libc = "0.2"
nix = { version = "0.28", default-features = false, features = ["fs", "signal", "term"] }
prost = "0.14"
qrcodegen = "1.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
rustls = "0.23"
rustls-native-certs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
sha2 = "0.10"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal", "fs", "time", "process", "sync"] }
tokio-rustls = "0.25"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ulid = "1.1"
url = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
tonic-prost-build = "0.14"
